Remove unnecessary whitespace in navbar and ensure flex display is set for consistency

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 
 .navbar {
+   display:flex;
    border-style: solid;
    height: 30px;
    width: 100%;
